--- a/Project1/to-do-list.html
+++ b/Project1/to-do-list.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO LIST</title>
-    <link rel="stylesheet" type="text/css" src="to-do-list.css">
+    <link rel="stylesheet" type="text/css" href="to-do-list.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="box"> <h1>TO-DO List</h1>
-            <div class="list">
-                <ul>
-                    <li>task1 </li>
-                    <li>task 2</li>
-                </ul>
-                
+        <div class="box"> 
+            <div class="heading-list">
+                <td>
+                    <h1 class="heading">TO-DO List</h1>
+                </td>
+                <td>
+                    <div class="logo"></div>
+                </td>
+            </div>
+            <div class="list-box">
+                <input class="task" type="text" placeholder="Enter Tasks">
+                <button class="add">ADD</button>
+                <ul class="list"></ul>
             </div>
         </div>
     </div>    
+    <script src="to-do-list.js"></script>
 </body>
 </html>
