HTMLand CSS done

--- a/Project1/to-do-list.html
+++ b/Project1/to-do-list.html
@@ -8,7 +8,23 @@
 </head>
 
 <body>
-    
+    <div class="conatiner">
+        <div class="box">
+            <div class="header-box">To-do list 
+                <img class="image" src="images/notes.png">
+            </div>
+            <div class="input">
+                <input type="text" id="input" placeholder="Enter Your Task"/>
+                <button onclick="addTask()"> ADD </button>
+            </div>
+            <div class="tasks">
+                    <ul id="list-container">
+                        <li class="checked">task1</li>
+                        <li>task2</li>
+                    </ul>
+            </div>
+        </div>
+    </div>
     <script src="to-do-list.js"></script>
 </body>
 </html>
