--- a/Project1/to-do-list.html
+++ b/Project1/to-do-list.html
@@ -14,13 +14,11 @@
                 <img class="image" src="images/notes.png">
             </div>
             <div class="input">
-                <input type="text" id="input" placeholder="Enter Your Task"/>
+                <input type="text" id="inputBox" placeholder="Enter Your Task"/>
                 <button onclick="addTask()"> ADD </button>
             </div>
             <div class="tasks">
                     <ul id="list-container">
-                        <li class="checked">task1</li>
-                        <li>task2</li>
                     </ul>
             </div>
         </div>
